# inventory-v2

./: .env.example  .gitignore  AGENTS.md  DOCUMENTATION.html  DOCUMENTATION.md  MANIFEST.in  Procfile  README.md  push_git_herouk  pyproject.toml  requirements.txt  run.py
distances/: distance.csv  distance.xlsx  routes.json  stations.csv
inventory_app/: __init__.py  __main__.py
inventory_app/static/: manifest.json  sw.js
inventory_app/templates/: alex.html  bani.html  branch_select.html  control-room.html  login.html
scripts/: deploy.sh
